--- a/tmux.conf
+++ b/tmux.conf
@@ -40,3 +40,19 @@ unbind-key C-z
 
 # Local config
 if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
+
+# open new window in current path
+bind c new-window -c "#{pane_current_path}"
+
+# split panes intuitively and also remember current path
+bind-key - split-window -v -c "#{pane_current_path}"
+bind-key \ split-window -h -c "#{pane_current_path}"
+
+set -g window-status-format " #I:#W "
+set -g window-status-current-format " #I:#W "
+
+# reload tmux file with C-s r
+bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
+
+# load tmux theme
+if-shell "[ -f ~/.tmux_base_16 ]" 'source ~/.tmux_base_16'
