Add ubuntu fixes

--- a/tmux.conf
+++ b/tmux.conf
@@ -55,4 +55,4 @@ set -g window-status-current-format " #I:#W "
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
 # load tmux theme
-if-shell "[ -f ~/.tmux_theme ]" 'source ~/.tmux_theme'
+#if-shell "[ -f ~/.tmux_theme ]" 'source ~/.tmux_theme'
